tests/paczka1/small_fuzzy/56184639.err
Error in line 8: VyyPL A209 16,22
Error in line 7: xxCIU1HRJgT A933 8,8
Error in line 11: g6K S338 29,9
